--- a/employee-data-management.html
+++ b/employee-data-management.html
@@ -24,20 +24,24 @@
 <div class="card-body">
 <form>
     <div class="form-group">
-        <label for="inputName">Employee Name</label>
-        <input type="name" class="form-control" id="inputName"  placeholder="Enter name">
+        <label for="name">Employee Name</label>
+        <input type="name" class="form-control" id="name"  placeholder="Enter name">
     </div>
     <div class="form-group">
-        <label for="inputRole">Role</label>
-        <input type="role" class="form-control" id="inputRole" placeholder="Role">
+        <label for="role">Role</label>
+        <input type="role" class="form-control" id="role" placeholder="Role">
     </div>
     <div class="form-group">
-        <label for="inputStartDate">Start Date</label>
-        <input type="start-date" class="form-control" id="inputStartDate" placeholder="(MM/DD/YYYY)">
+        <label for="start-date">Start Date</label>
+        <input type="start-date" class="form-control" id="start-date" placeholder="(MM/DD/YYYY)">
     </div>
     <div class="form-group">
-        <label for="inputRate">Monthly Rate</label>
-        <input type="rate" class="form-control" id="inputRate" placeholder="1000">
+        <label for="total-months">Total Months</label>
+        <input type="rate" class="form-control" id="total-months" placeholder="1000">
+    </div>
+    <div class="form-group">
+        <label for="rate">Monthly Rate</label>
+        <input type="rate" class="form-control" id="rate" placeholder="1000">
     </div>
     <button type="submit" class="btn btn-success">Submit</button>
 </form>
