--- a/employee-data-management.html
+++ b/employee-data-management.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+KR" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
     <title>Employee Data Management Application</title>
 </head>
 <body>
@@ -76,5 +77,7 @@
         <span>Made with <i class="far fa-heart"></i></span>
     </div>
 </footer>
+
+<script src="https://code.jquery.com/jquery.js"></script>
 </body>
 </html>
