--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 <label for="emp-start-date">Start Date</label>
                 <input type="text" class="form-control" id="emp-start-date" placeholder="mm/dd/yyyy">
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label for="emp-months-worked">Months Worked</label>
                 <input type="number" class="form-control" id="emp-months-worked">
-            </div>
+            </div> -->
             <div class="form-group">
                 <label for="emp-monthly-rate">Monthly Rate</label>
                 <input type="number" class="form-control" id="emp-monthly-rate" placeholder="(number only)">
@@ -85,6 +85,7 @@
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.29.0/date_fns.min.js"></script>
     <script src='logic.js'></script>
 
 </body>
